# qr_in_out

./: .env.example  .gitignore  README.ko.md  README.md  app.py  pyproject.toml  requirements.txt  test_zbar_fix.py
.github/workflows/: publish.yml
.streamlit/: config.toml
config/: default_credentials.py
core/: auth.py  models.py  qr_manager.py  storage.py  time_service.py  time_validator.py
data/: admin_settings.json  checkpoints.json  guests.json
docs/: GITHUB_RELEASE_GUIDE.md  SECURITY.md
docs/planning-artifacts/: PRD-Admin.md  PRD-Guest.md  PRD-Host.md  PRD-Overview.md  product-brief-qr-in-out-en.md  product-brief-qr-in-out.md
docs/planning-artifacts/archive/: PRD-qr-in-out-v1.1-updates.md  PRD-qr-in-out.md
pages/: 1_👤_Admin.py  2_🖥️_Host.py  3_👋_Guest.py
scripts/: capture_screenshots.py
utils/: helpers.py
